[project]
name = "fastapi-bot"
version = "0.1.0"
description = "Telegram bot for checking people"
authors = ["Vadim Mamaev <your-email@example.com>"]
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = "*"
openai = "*"
python-telegram-bot = "*"
tiktoken = "*"
pydantic = "*"
